Отовсюду убраны подтяжки, в пейлоаде выловлено несколько багов и починнен (вроде как) файл проекта

--- a/src/board/SINS/SINS.ioc
+++ b/src/board/SINS/SINS.ioc
@@ -134,6 +134,7 @@ USART3.IPParameters=VirtualMode
 PA5.GPIOParameters=GPIO_Label
 PC11.Mode=Asynchronous
 SH.ADCx_IN9.0=ADC1_IN9,IN9
+PB8.GPIO_PuPdOD=GPIO_NOPULL
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.S_TIM4_CH1.0=TIM4_CH1
@@ -144,6 +145,7 @@ PC4.Locked=true
 NVIC.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 PC5.Signal=ADCx_IN15
 SH.ADCx_IN9.ConfNb=1
+PB10.GPIOParameters=GPIO_PuPdOD
 Dma.Request0=I2C1_RX
 NVIC.DMA1_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 I2C2.I2C_Mode=I2C_Fast
@@ -161,11 +163,14 @@ SH.S_TIM4_CH1.ConfNb=1
 Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
 ProjectManager.ProjectFileName=SINS.ioc
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+PB8.GPIOParameters=GPIO_PuPdOD
 Mcu.PinsNb=35
 ProjectManager.NoMain=false
 PC11.Locked=true
 ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,NbrOfConversion
 PC11.Signal=USART3_RX
+PB10.GPIO_PuPdOD=GPIO_NOPULL
+PB11.GPIO_PuPdOD=GPIO_NOPULL
 PC2.Signal=ADCx_IN12
 PC4.Signal=ADCx_IN14
 PC10.Mode=Asynchronous
@@ -184,6 +189,7 @@ RCC.FamilyName=M
 PA0-WKUP.GPIO_Label=GPS_PPS_INPUT
 PA0-WKUP.Signal=GPXTI0
 PA0-WKUP.Locked=true
+PB9.GPIOParameters=GPIO_PuPdOD
 PA3.Mode=Asynchronous
 PA13.Signal=SYS_JTMS-SWDIO
 PA11.Locked=true
@@ -196,6 +202,7 @@ PB9.Mode=I2C
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
 Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_TX.1.Instance=DMA1_Stream6
+PB11.GPIOParameters=GPIO_PuPdOD
 PB9.Locked=true
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
@@ -291,6 +298,7 @@ Mcu.Pin16=PC5
 Mcu.Pin13=PA6
 Mcu.Pin14=PA7
 Mcu.Pin19=PB10
+PB9.GPIO_PuPdOD=GPIO_NOPULL
 SH.S_TIM3_CH1.ConfNb=1
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PB0
