--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -4,6 +4,7 @@ PB13.GPIOParameters=GPIO_Label
 PC7.GPIOParameters=GPIO_PuPd
 PH0-OSC_IN.Signal=RCC_OSC_IN
 NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+PC9.GPIO_PuPdOD=GPIO_NOPULL
 PB10.Mode=I2C
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 PC12.Locked=true
@@ -49,6 +50,7 @@ MxDb.Version=DB.6.0.21
 PB0.GPIOParameters=PinState,GPIO_Label
 ProjectManager.BackupPrevious=false
 Dma.I2C2_TX.4.MemInc=DMA_MINC_ENABLE
+PA8.GPIO_PuPdOD=GPIO_NOPULL
 SH.ADCx_IN1.ConfNb=1
 Dma.I2C1_TX.0.MemInc=DMA_MINC_ENABLE
 PB1.GPIO_Label=BME_INT_PWR
@@ -60,6 +62,7 @@ PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM4.Period=1999
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+PB6.GPIO_PuPdOD=GPIO_NOPULL
 ProjectManager.HalAssertFull=false
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 VP_TIM3_VS_ControllerModeClock.Signal=TIM3_VS_ControllerModeClock
@@ -76,6 +79,7 @@ PB14.GPIOParameters=GPIO_Label
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB1TimFreq_Value=84000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PB10.GPIOParameters=GPIO_PuPdOD
 Dma.I2C3_TX.2.PeriphInc=DMA_PINC_DISABLE
 NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.CustomerFirmwarePackage=
@@ -91,6 +95,8 @@ Mcu.PinsNb=46
 PC11.Locked=true
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 PA9.GPIO_Label=SENS_CTRL_CO_2
+PB10.GPIO_PuPdOD=GPIO_NOPULL
+PB11.GPIO_PuPdOD=GPIO_NOPULL
 PC6.Signal=USART6_TX
 PC2.Signal=GPIO_Output
 PA11.GPIO_Label=MICS_PWR
@@ -113,6 +119,7 @@ I2C1.I2C_Mode=I2C_Fast
 PC6.Mode=Asynchronous
 PA9.Signal=GPIO_Output
 PB5.Locked=true
+PB11.GPIOParameters=GPIO_PuPdOD
 NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PC7.GPIO_PuPd=GPIO_PULLUP
 Dma.I2C1_RX.1.Instance=DMA1_Stream0
@@ -148,8 +155,10 @@ PA9.Locked=true
 Dma.I2C3_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 Dma.I2C2_TX.4.Priority=DMA_PRIORITY_HIGH
+PB7.GPIO_PuPdOD=GPIO_NOPULL
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
+PC9.GPIOParameters=GPIO_PuPdOD
 IWDG.IPParameters=Prescaler,Reload
 Mcu.Pin26=PA9
 Mcu.Pin27=PA11
@@ -264,6 +273,7 @@ ProjectManager.PreviousToolchain=STM32CubeIDE
 RCC.VcooutputI2S=192000000
 Dma.I2C1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 SH.ADCx_IN3.ConfNb=1
+PA8.GPIOParameters=GPIO_PuPdOD
 Mcu.Pin6=PC2
 Dma.I2C1_TX.0.Priority=DMA_PRIORITY_VERY_HIGH
 Mcu.Pin7=PC3
@@ -302,6 +312,7 @@ Dma.I2C2_RX.5.Instance=DMA1_Stream3
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 Dma.I2C1_RX.1.Mode=DMA_NORMAL
 Dma.RequestsNb=6
+PB6.GPIOParameters=GPIO_PuPdOD
 PB0.Locked=true
 ProjectManager.ProjectName=PAYLOAD
 Dma.I2C3_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
@@ -362,6 +373,7 @@ PA13.Signal=SYS_JTMS-SWDIO
 Dma.I2C3_RX.3.PeriphInc=DMA_PINC_DISABLE
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 ProjectManager.TargetToolchain=STM32CubeIDE
+PB7.GPIOParameters=GPIO_PuPdOD
 Dma.I2C3_RX.3.Instance=DMA1_Stream2
 Dma.I2C2_RX.5.PeriphInc=DMA_PINC_DISABLE
 PC2.Locked=true
