Дополнительный пин для синхронизации времени

--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -27,6 +27,7 @@ PinOutPanel.RotationAngle=0
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 RTC.SynchPrediv=0x7fff
+PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 I2C1.DutyCycle=I2C_DUTYCYCLE_2
 RCC.APB2TimFreq_Value=168000000
 Dma.I2C3_TX.2.Priority=DMA_PRIORITY_VERY_HIGH
@@ -67,12 +68,15 @@ ProjectManager.HalAssertFull=false
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 VP_TIM3_VS_ControllerModeClock.Signal=TIM3_VS_ControllerModeClock
 RCC.MCO2PinFreq_Value=168000000
+PC8.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 Dma.I2C1_TX.0.PeriphInc=DMA_PINC_DISABLE
 Mcu.Package=LQFP64
 PB1.Signal=GPIO_Output
+SH.GPXTI8.0=GPIO_EXTI8
 Dma.I2C2_TX.4.PeriphInc=DMA_PINC_DISABLE
 PA14.Locked=true
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+SH.GPXTI8.ConfNb=1
 PC11.Mode=Asynchronous
 Dma.I2C1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PB14.GPIOParameters=GPIO_Label
@@ -90,8 +94,8 @@ Dma.I2C2_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.I2C3_RX.3.Priority=DMA_PRIORITY_VERY_HIGH
 ProjectManager.ProjectFileName=PAYLOAD.ioc
 ADC1.Rank-0\#ChannelRegularConversion=1
-PA15.GPIOParameters=GPIO_PuPd,GPIO_Label
-Mcu.PinsNb=46
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+Mcu.PinsNb=47
 PC11.Locked=true
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 PA9.GPIO_Label=SENS_CTRL_CO_2
@@ -124,32 +128,33 @@ NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PC7.GPIO_PuPd=GPIO_PULLUP
 Dma.I2C1_RX.1.Instance=DMA1_Stream0
 Dma.I2C1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Mcu.Pin46=VP_TIM4_VS_ClockSourceINT
 PB10.Signal=I2C2_SCL
 PB14.Signal=GPIO_Output
-Mcu.Pin40=VP_ADC1_TempSens_Input
-Mcu.Pin41=VP_IWDG_VS_IWDG
-Mcu.Pin44=VP_TIM3_VS_ControllerModeClock
-Mcu.Pin45=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin42=VP_RTC_VS_RTC_Activate
+Mcu.Pin40=PB8
+Mcu.Pin41=VP_ADC1_TempSens_Input
+Mcu.Pin44=VP_SYS_VS_Systick
+Mcu.Pin45=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin42=VP_IWDG_VS_IWDG
 Dma.I2C1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Mcu.Pin43=VP_SYS_VS_Systick
+Mcu.Pin43=VP_RTC_VS_RTC_Activate
 ProjectManager.LastFirmware=true
-Mcu.Pin37=PB6
-Mcu.Pin38=PB7
-Mcu.Pin35=PD2
-Mcu.Pin36=PB5
+Mcu.Pin37=PB5
+Mcu.Pin38=PB6
+Mcu.Pin35=PC12
+Mcu.Pin36=PD2
 SH.ADCx_IN0.ConfNb=1
-Mcu.Pin39=PB8
+Mcu.Pin39=PB7
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 PC2.GPIOParameters=PinState,GPIO_Label
-Mcu.Pin30=PA14
+Mcu.Pin30=PA13
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PC11
+Mcu.Pin33=PC10
 TIM3.IPParameters=Slave_TriggerPolarity
-Mcu.Pin34=PC12
-Mcu.Pin31=PA15
+Mcu.Pin34=PC11
+Mcu.Pin31=PA14
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
-Mcu.Pin32=PC10
+Mcu.Pin32=PA15
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 PA9.Locked=true
 Dma.I2C3_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
@@ -160,14 +165,14 @@ PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 PC9.GPIOParameters=GPIO_PuPdOD
 IWDG.IPParameters=Prescaler,Reload
-Mcu.Pin26=PA9
-Mcu.Pin27=PA11
+Mcu.Pin26=PA8
+Mcu.Pin27=PA9
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PC9
+Mcu.Pin24=PC8
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA8
-Mcu.Pin28=PA12
-Mcu.Pin29=PA13
+Mcu.Pin25=PC9
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
 PA4.Signal=ADCx_IN4
 Mcu.Pin22=PC6
 PB5.Signal=GPIO_Output
@@ -200,6 +205,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PA3
 Dma.I2C1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Mcu.Pin12=PA4
+PC8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 NVIC.I2C3_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Mcu.Pin10=PA2
 PC3.GPIO_Label=HEATER_PWR
@@ -358,6 +364,7 @@ UART4.IPParameters=VirtualMode,BaudRate,OverSampling
 ProjectManager.NoMain=false
 USART6.IPParameters=VirtualMode,Mode
 PC11.Signal=UART4_RX
+PC8.Signal=GPXTI8
 I2C3.ClockSpeed=200000
 PC10.Mode=Asynchronous
 ProjectManager.DefaultFWLocation=true
@@ -368,6 +375,7 @@ PA12.GPIO_Label=O2_PWR
 RCC.FamilyName=M
 PA0-WKUP.Locked=true
 NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+PC8.GPIO_Label=PPS_Input_debug
 PC12.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA13.Signal=SYS_JTMS-SWDIO
 Dma.I2C3_RX.3.PeriphInc=DMA_PINC_DISABLE
@@ -419,6 +427,7 @@ PA13.Locked=true
 Dma.I2C2_TX.4.Instance=DMA1_Stream7
 PB7.Mode=I2C
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA14.Signal=SYS_JTCK-SWCLK
 NVIC.I2C2_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.HSI_VALUE=16000000
@@ -427,11 +436,12 @@ ADC1.NbrOfConversionFlag=1
 SH.GPXTI15.0=GPIO_EXTI15
 RCC.PLLM=4
 RCC.PLLN=168
-PA15.GPIO_PuPd=GPIO_PULLDOWN
+PA15.GPIO_PuPd=GPIO_NOPULL
 Dma.I2C3_TX.2.Direction=DMA_MEMORY_TO_PERIPH
 IWDG.Prescaler=IWDG_PRESCALER_128
 PB7.Locked=true
 PB8.Signal=GPIO_Output
+PC8.Locked=true
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PC9.Signal=I2C3_SDA
 PC7.Mode=Asynchronous
