--- a/src/research/stm32f1-i2c-slave/stm32f1-i2c-slave.ioc
+++ b/src/research/stm32f1-i2c-slave/stm32f1-i2c-slave.ioc
@@ -1,206 +1,207 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C1_RX.0.Instance=DMA1_Channel7
-Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_RX.0.Mode=DMA_NORMAL
-Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_RX.0.Priority=DMA_PRIORITY_HIGH
-Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C1_TX.1.Instance=DMA1_Channel6
-Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_TX.1.Mode=DMA_NORMAL
-Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.1.Priority=DMA_PRIORITY_HIGH
-Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=I2C1_RX
-Dma.Request1=I2C1_TX
-Dma.Request2=USART1_TX
-Dma.Request3=USART1_RX
-Dma.RequestsNb=4
-Dma.USART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.3.Instance=DMA1_Channel5
-Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.3.Mode=DMA_NORMAL
-Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.2.Instance=DMA1_Channel4
-Dma.USART1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.2.Mode=DMA_NORMAL
-Dma.USART1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.2.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-File.Version=6
-GPIO.groupedBy=Group By Peripherals
-I2C1.ClockSpeed=100000
-I2C1.DualAddressMode=I2C_DUALADDRESS_DISABLE
-I2C1.IPParameters=OwnAddress,DualAddressMode,NoStretchMode,ClockSpeed
-I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
-I2C1.OwnAddress=0x68
-KeepUserPlacement=false
 Mcu.Family=STM32F1
+ProjectManager.MainLocation=Core/Src
+RCC.MCOFreq_Value=64000000
+Dma.USART1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+ProjectManager.KeepUserCode=true
+Mcu.UserName=STM32F103C8Tx
+Dma.I2C1_TX.1.Mode=DMA_NORMAL
+RCC.PLLCLKFreq_Value=64000000
+PC13-TAMPER-RTC.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-LL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_RTC_Init-RTC-false-LL-true
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+RCC.RTCFreq_Value=32768
+RCC.ADCFreqValue=32000000
+Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+USART1.IPParameters=VirtualMode
+PinOutPanel.RotationAngle=0
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+ProjectManager.StackSize=0x400
+PB5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
+Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Mcu.IP4=RTC
+RCC.FCLKCortexFreq_Value=64000000
+Mcu.IP5=SYS
+I2C1.IPParameters=OwnAddress,DualAddressMode,NoStretchMode,ClockSpeed
+Mcu.IP2=NVIC
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.IP3=RCC
+PA15.GPIO_Label=TIME
 Mcu.IP0=DMA
 Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=RTC
-Mcu.IP5=SYS
-Mcu.IP6=USART1
+Mcu.UserConstants=
+I2C1.ClockSpeed=100000
+Mcu.ThirdPartyNb=0
+PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+RCC.HCLKFreq_Value=64000000
 Mcu.IPNb=7
-Mcu.Name=STM32F103C(8-B)Tx
-Mcu.Package=LQFP48
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB5
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_RTC_VS_RTC_Activate
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin4=PD1-OSC_OUT
-Mcu.Pin5=PA9
+ProjectManager.PreviousToolchain=
+RCC.APB2TimFreq_Value=64000000
+PB6.Signal=I2C1_SCL
+PB5.PinState=GPIO_PIN_SET
+Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+PB6.Mode=I2C
+Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
+RTC.IPParameters=AutoPrediv
 Mcu.Pin6=PA10
 Mcu.Pin7=PA13
 Mcu.Pin8=PA14
 Mcu.Pin9=PA15
-Mcu.PinsNb=15
-Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
-Mcu.UserName=STM32F103C8Tx
-MxCube.Version=5.6.0
-MxDb.Version=DB.5.0.60
+RCC.AHBFreq_Value=64000000
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC14-OSC32_IN
+GPIO.groupedBy=Group By Peripherals
+Mcu.Pin2=PC15-OSC32_OUT
+Dma.I2C1_RX.0.Priority=DMA_PRIORITY_HIGH
+Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin4=PD1-OSC_OUT
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+Mcu.Pin5=PA9
+ProjectManager.ProjectBuild=false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.I2C1_RX.0.Mode=DMA_NORMAL
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+RCC.PLLMUL=RCC_PLL_MUL8
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
+MxDb.Version=DB.6.0.21
+I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
+ProjectManager.BackupPrevious=false
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC13-TAMPER-RTC.PinState=GPIO_PIN_SET
+PA14.Mode=Serial_Wire
+File.Version=6
+Dma.USART1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+PB7.Signal=I2C1_SDA
+Dma.USART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+PB6.Locked=true
+Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PC13-TAMPER-RTC.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+Dma.USART1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+Dma.RequestsNb=4
+ProjectManager.HalAssertFull=false
+ProjectManager.ProjectName=stm32f1-i2c-slave
+RCC.PLLMCOFreq_Value=32000000
+Mcu.Package=LQFP48
+Dma.USART1_RX.3.Instance=DMA1_Channel5
+ProjectManager.ToolChainLocation=
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PA10.Signal=USART1_RX
+PA15.Signal=GPXTI15
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB5.GPIO_Label=I2C_INT
+Dma.Request2=USART1_TX
+Dma.Request1=I2C1_TX
+RCC.APB1TimFreq_Value=64000000
+Dma.Request3=USART1_RX
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.ForceEnableDMAVector=false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+RTC.AutoPrediv=RTC_AUTO_1_SECOND
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
-PA13.Mode=Serial_Wire
-PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
-PA14.Signal=SYS_JTCK-SWCLK
-PA15.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PA15.GPIO_Label=TIME
-PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PA15.Locked=true
-PA15.Signal=GPXTI15
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
-PB5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB5.GPIO_Label=I2C_INT
+Dma.Request0=I2C1_RX
+Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
+ProjectManager.CustomerFirmwarePackage=
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 PB5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB5.GPIO_PuPd=GPIO_PULLUP
-PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB5.Locked=true
-PB5.PinState=GPIO_PIN_SET
-PB5.Signal=GPIO_Output
-PB6.Locked=true
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.Locked=true
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
-PC13-TAMPER-RTC.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PC13-TAMPER-RTC.GPIO_Label=LED
-PC13-TAMPER-RTC.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PC13-TAMPER-RTC.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.PinState=GPIO_PIN_SET
-PC13-TAMPER-RTC.Signal=GPIO_Output
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
+ProjectManager.ProjectFileName=stm32f1-i2c-slave.ioc
+Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+PA10.Mode=Asynchronous
+PA15.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+Mcu.PinsNb=15
+Dma.USART1_TX.2.MemInc=DMA_MINC_ENABLE
+ProjectManager.NoMain=false
+Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
+PC13-TAMPER-RTC.Signal=GPIO_Output
+ProjectManager.DefaultFWLocation=true
+Dma.USART1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+PD0-OSC_IN.Signal=RCC_OSC_IN
+ProjectManager.DeletePrevious=true
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+RCC.FamilyName=M
+I2C1.DualAddressMode=I2C_DUALADDRESS_DISABLE
+PA13.Signal=SYS_JTMS-SWDIO
+PA15.Locked=true
+PA9.Mode=Asynchronous
+ProjectManager.TargetToolchain=STM32CubeIDE
+PA9.Signal=USART1_TX
+Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.1.Instance=DMA1_Channel6
+PB5.Locked=true
+ProjectManager.RegisterCallBack=
+PC13-TAMPER-RTC.Locked=true
+RCC.USBFreq_Value=64000000
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PD0-OSC_IN.Mode=HSE-External-Oscillator
-PD0-OSC_IN.Signal=RCC_OSC_IN
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
-PD1-OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=6
-ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F103C8Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
-ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
-ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
-ProjectManager.MainLocation=Core/Src
-ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
-ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=stm32f1-i2c-slave.ioc
-ProjectManager.ProjectName=stm32f1-i2c-slave
-ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=STM32CubeIDE
-ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_RTC_Init-RTC-false-LL-true
-RCC.ADCFreqValue=32000000
-RCC.AHBFreq_Value=64000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=64000000
-RCC.APB2Freq_Value=64000000
-RCC.APB2TimFreq_Value=64000000
-RCC.FCLKCortexFreq_Value=64000000
-RCC.FamilyName=M
-RCC.HCLKFreq_Value=64000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=64000000
-RCC.PLLCLKFreq_Value=64000000
-RCC.PLLMCOFreq_Value=32000000
-RCC.PLLMUL=RCC_PLL_MUL8
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
-RCC.RTCFreq_Value=32768
-RCC.SYSCLKFreq_VALUE=64000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=64000000
-RCC.USBFreq_Value=64000000
-RCC.VCOOutput2Freq_Value=8000000
-RTC.AutoPrediv=RTC_AUTO_1_SECOND
-RTC.IPParameters=AutoPrediv
-SH.GPXTI15.0=GPIO_EXTI15
-SH.GPXTI15.ConfNb=1
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_ASYNC
-VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
-VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
+Dma.I2C1_TX.1.Priority=DMA_PRIORITY_HIGH
+ProjectManager.LastFirmware=true
+PC13-TAMPER-RTC.GPIO_Label=LED
+RCC.VCOOutput2Freq_Value=8000000
+RCC.APB2Freq_Value=64000000
+MxCube.Version=6.2.1
+Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.2.Priority=DMA_PRIORITY_LOW
+VP_SYS_VS_Systick.Mode=SysTick
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+PA13.Mode=Serial_Wire
+ProjectManager.FreePins=false
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+ProjectManager.AskForMigrate=true
+Mcu.Name=STM32F103C(8-B)Tx
+Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
+ProjectManager.UnderRoot=true
+Dma.USART1_TX.2.PeriphInc=DMA_PINC_DISABLE
+I2C1.OwnAddress=0x68
+Mcu.IP6=USART1
+ProjectManager.CoupleFile=false
+RCC.SYSCLKFreq_VALUE=64000000
+PC13-TAMPER-RTC.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB5.Signal=GPIO_Output
+RCC.TimSysFreq_Value=64000000
+NVIC.ForceEnableDMAVector=false
+KeepUserPlacement=false
+PB5.GPIO_PuPd=GPIO_PULLUP
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+USART1.VirtualMode=VM_ASYNC
+ProjectManager.CompilerOptimize=6
+PB7.Mode=I2C
+PA14.Signal=SYS_JTCK-SWCLK
+ProjectManager.HeapSize=0x200
+Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.Pin13=VP_RTC_VS_RTC_Activate
+Mcu.Pin14=VP_SYS_VS_Systick
+SH.GPXTI15.ConfNb=1
+ProjectManager.ComputerToolchain=false
+Dma.USART1_TX.2.Mode=DMA_NORMAL
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+SH.GPXTI15.0=GPIO_EXTI15
+Mcu.Pin11=PB6
+Mcu.Pin12=PB7
+Dma.USART1_TX.2.Instance=DMA1_Channel4
+Mcu.Pin10=PB5
+PB7.Locked=true
+NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+RCC.APB1Freq_Value=32000000
+Dma.USART1_RX.3.Mode=DMA_NORMAL
+Dma.I2C1_RX.0.Instance=DMA1_Channel7
+ProjectManager.DeviceId=STM32F103C8Tx
+ProjectManager.LibraryCopy=1
 isbadioc=false
