Игры с VREFINT на пейлоаде

--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -47,6 +47,7 @@ PA4.Locked=true
 Dma.I2C3_TX.2.Instance=DMA1_Stream4
 PB12.GPIO_Label=SENS_CTRL_NH3_1
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
+VP_ADC1_Vref_Input.Mode=IN-Vrefint
 MxDb.Version=DB.6.0.21
 PB0.GPIOParameters=PinState,GPIO_Label
 ProjectManager.BackupPrevious=false
@@ -95,9 +96,9 @@ Dma.I2C3_RX.3.Priority=DMA_PRIORITY_VERY_HIGH
 ProjectManager.ProjectFileName=PAYLOAD.ioc
 ADC1.Rank-0\#ChannelRegularConversion=1
 PA15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-Mcu.PinsNb=47
+Mcu.PinsNb=48
 PC11.Locked=true
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler
 PA9.GPIO_Label=SENS_CTRL_CO_2
 PB10.GPIO_PuPdOD=GPIO_NOPULL
 PB11.GPIO_PuPdOD=GPIO_NOPULL
@@ -128,16 +129,17 @@ NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PC7.GPIO_PuPd=GPIO_PULLUP
 Dma.I2C1_RX.1.Instance=DMA1_Stream0
 Dma.I2C1_RX.1.PeriphInc=DMA_PINC_DISABLE
-Mcu.Pin46=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin47=VP_TIM4_VS_ClockSourceINT
 PB10.Signal=I2C2_SCL
 PB14.Signal=GPIO_Output
 Mcu.Pin40=PB8
 Mcu.Pin41=VP_ADC1_TempSens_Input
-Mcu.Pin44=VP_SYS_VS_Systick
-Mcu.Pin45=VP_TIM3_VS_ControllerModeClock
-Mcu.Pin42=VP_IWDG_VS_IWDG
+Mcu.Pin44=VP_RTC_VS_RTC_Activate
+Mcu.Pin45=VP_SYS_VS_Systick
+Mcu.Pin42=VP_ADC1_Vref_Input
 Dma.I2C1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Mcu.Pin43=VP_RTC_VS_RTC_Activate
+Mcu.Pin43=VP_IWDG_VS_IWDG
 ProjectManager.LastFirmware=true
 Mcu.Pin37=PB5
 Mcu.Pin38=PB6
@@ -404,6 +406,7 @@ Dma.I2C2_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
 I2C2.ClockSpeed=200000
 VP_SYS_VS_Systick.Mode=SysTick
 PC1.GPIO_Label=MS_EXT_PWR
+VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 Dma.I2C1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.I2C2_TX.4.Direction=DMA_MEMORY_TO_PERIPH
@@ -448,6 +451,7 @@ PC7.Mode=Asynchronous
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 RCC.APB1Freq_Value=42000000
 PC12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV6
 PB11.Locked=true
 ProjectManager.DeviceId=STM32F405RGTx
 PB12.Signal=GPIO_Output
