i2c работает на ark

--- a/src/board/ARK/ark.ioc
+++ b/src/board/ARK/ark.ioc
@@ -5,6 +5,7 @@ NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA2.GPIO_PuPd=GPIO_NOPULL
 RCC.MCOFreq_Value=72000000
 Dma.USART1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+I2C2.IPParameters=OwnAddress
 Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -260,7 +261,7 @@ Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
 ProjectManager.UnderRoot=true
 Mcu.Pin25=VP_ADC1_TempSens_Input
 Dma.USART1_TX.2.PeriphInc=DMA_PINC_DISABLE
-I2C1.OwnAddress=0x69
+I2C1.OwnAddress=0x68
 Mcu.IP8=SYS
 Mcu.IP9=USART1
 Mcu.Pin28=VP_SYS_VS_Systick
