Реализована поддержка CSS на SINS

--- a/src/board/SINS/SINS.ioc
+++ b/src/board/SINS/SINS.ioc
@@ -55,7 +55,7 @@ RCC.HCLKFreq_Value=168000000
 Mcu.IPNb=11
 RCC.I2SClocksFreq_Value=192000000
 ProjectManager.PreviousToolchain=
-RCC.APB2TimFreq_Value=84000000
+RCC.APB2TimFreq_Value=168000000
 PB6.Signal=S_TIM4_CH1
 RCC.VcooutputI2S=192000000
 Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
@@ -126,7 +126,6 @@ PA7.Locked=true
 PA5.Locked=true
 SH.ADCx_IN14.0=ADC1_IN14,IN14
 USART2.VirtualMode=VM_ASYNC
-RCC.EnbaleCSS=true
 ProjectManager.ToolChainLocation=
 PA2.GPIO_Label=GPS_UART_TX
 RCC.LSI_VALUE=32000
@@ -159,7 +158,6 @@ PA3.Signal=USART2_RX
 PA2.Locked=true
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 PC15-OSC32_OUT.Mode=LSE-External-Clock-Source
 SH.S_TIM4_CH1.ConfNb=1
 Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
@@ -208,6 +206,7 @@ PB11.GPIOParameters=GPIO_PuPdOD
 PB9.Locked=true
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
+RCC.LSE_VALUE=32768
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PA1.Signal=ADCx_IN1
 PB1.Locked=true
@@ -243,14 +242,14 @@ Mcu.Pin31=PB9
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 Mcu.Pin32=VP_ADC1_TempSens_Input
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PA4.GPIOParameters=GPIO_Label
 SH.ADCx_IN8.ConfNb=1
 ADC1.NbrOfConversion=1
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 IWDG.IPParameters=Prescaler
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F405RGTx
@@ -267,7 +266,6 @@ Mcu.IP8=SYS
 Mcu.IP9=USART2
 Mcu.Pin28=PB6
 Mcu.IP6=RCC
-RCC.APB2TimCLKDivider=1
 Mcu.Pin29=PB7
 Mcu.IP7=RTC
 ProjectManager.CoupleFile=false
@@ -315,7 +313,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
 Mcu.Pin11=PA4
 Mcu.Pin12=PA5
-RCC.PLLM=4
+RCC.PLLM=8
 PB8.Mode=I2C
 RCC.PLLN=168
 Mcu.Pin10=PA3
