Реализована поддержка CSS на PAYLOAD

--- a/src/board/PAYLOAD/PAYLOAD.ioc
+++ b/src/board/PAYLOAD/PAYLOAD.ioc
@@ -384,6 +384,7 @@ Dma.I2C2_RX.5.PeriphInc=DMA_PINC_DISABLE
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
 TIM4.Prescaler=8399
+RCC.LSE_VALUE=32768
 PA1.Signal=ADCx_IN1
 PB1.Locked=true
 RCC.VCOI2SOutputFreq_Value=384000000
@@ -404,7 +405,7 @@ VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 Dma.I2C1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.I2C2_TX.4.Direction=DMA_MEMORY_TO_PERIPH
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F405RGTx
 SH.S_TIM3_ETR.0=TIM3_ETR,TriggerSource_ETR
