Реализована поддержка CSS на ARK

--- a/src/board/ARK/ark.ioc
+++ b/src/board/ARK/ark.ioc
@@ -3,9 +3,8 @@ Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
 NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA2.GPIO_PuPd=GPIO_NOPULL
-RCC.MCOFreq_Value=72000000
+RCC.MCOFreq_Value=64000000
 Dma.USART1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-I2C2.IPParameters=OwnAddress
 Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -15,8 +14,7 @@ PB10.Mode=I2C
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 ADC1.ContinuousConvMode=DISABLE
 Dma.I2C1_TX.1.Mode=DMA_NORMAL
-RCC.PLLCLKFreq_Value=72000000
-PC13-TAMPER-RTC.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+RCC.PLLCLKFreq_Value=64000000
 PB14.GPIO_Label=DPC_RST
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 PA3.GPIO_PuPd=GPIO_NOPULL
@@ -26,12 +24,13 @@ PA2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 RCC.RTCFreq_Value=40000
 PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-RCC.ADCFreqValue=12000000
+RCC.ADCFreqValue=10666666.666666666
 PA7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA6.GPIO_Label=BMS2
 PB0.GPIO_Label=PGOOD1
 PB6.GPIO_Label=TIME
 Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+RCC.OscillatorTypeHSE-ClockTree=RCC_OSCILLATORTYPE_HSE
 USART1.IPParameters=VirtualMode
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB11.Signal=I2C2_SDA
@@ -47,7 +46,7 @@ PD1-OSC_OUT.Signal=RCC_OSC_OUT
 Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Mcu.IP4=IWDG
 Mcu.IP5=NVIC
-RCC.FCLKCortexFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=64000000
 Mcu.IP2=I2C1
 I2C1.IPParameters=OwnAddress,DualAddressMode,NoStretchMode,ClockSpeed
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -59,30 +58,30 @@ PA7.PinState=GPIO_PIN_SET
 I2C1.ClockSpeed=100000
 Mcu.ThirdPartyNb=0
 PB1.GPIO_PuPd=GPIO_PULLUP
-RCC.HCLKFreq_Value=72000000
+RCC.HCLKFreq_Value=64000000
 Mcu.IPNb=10
 ProjectManager.PreviousToolchain=
-RCC.APB2TimFreq_Value=72000000
+RCC.APB2TimFreq_Value=64000000
 PB6.Signal=GPXTI6
 PB5.PinState=GPIO_PIN_SET
 Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
 RTC.IPParameters=AutoPrediv
 PB15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
 PA1.GPIO_PuPd=GPIO_NOPULL
-RCC.AHBFreq_Value=72000000
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PD0-OSC_IN
+RCC.AHBFreq_Value=64000000
+Mcu.Pin0=PD0-OSC_IN
+Mcu.Pin1=PD1-OSC_OUT
 GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin2=PA1
 Dma.I2C1_RX.0.Priority=DMA_PRIORITY_HIGH
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -91,7 +90,7 @@ PA4.GPIO_PuPd=GPIO_NOPULL
 PA4.Locked=true
 Dma.I2C1_RX.0.Mode=DMA_NORMAL
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PLLMUL=RCC_PLL_MUL8
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
 MxDb.Version=DB.6.0.21
@@ -101,7 +100,6 @@ PA6.GPIO_PuPd=GPIO_NOPULL
 PA1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
 ProjectManager.BackupPrevious=false
-PC13-TAMPER-RTC.PinState=GPIO_PIN_SET
 PA14.Mode=Serial_Wire
 PB1.GPIO_Label=PGOOD2
 PA5.GPIO_PuPd=GPIO_NOPULL
@@ -113,7 +111,6 @@ PB8.Locked=true
 PB6.Locked=true
 Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PC13-TAMPER-RTC.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 Dma.USART1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Dma.RequestsNb=4
@@ -123,7 +120,7 @@ PB0.Locked=true
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 ProjectManager.ProjectName=ark
 PB7.PinState=GPIO_PIN_SET
-RCC.PLLMCOFreq_Value=36000000
+RCC.PLLMCOFreq_Value=32000000
 PB7.GPIO_Label=I2C_INT
 Mcu.Package=LQFP48
 PB9.Signal=I2C1_SDA
@@ -150,7 +147,7 @@ PB5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB5.GPIO_Label=LED
 Dma.Request2=USART1_TX
 Dma.Request1=I2C1_TX
-RCC.APB1TimFreq_Value=72000000
+RCC.APB1TimFreq_Value=64000000
 Dma.Request3=USART1_RX
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -180,14 +177,13 @@ Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 ADC1.Rank-0\#ChannelRegularConversion=1
 PD1-OSC_OUT.Mode=HSE-External-Clock-Source
 PA10.Mode=Asynchronous
-Mcu.PinsNb=29
+Mcu.PinsNb=28
 Dma.USART1_TX.2.MemInc=DMA_MINC_ENABLE
 ProjectManager.NoMain=false
 Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,DiscontinuousConvMode,ContinuousConvMode,master
 PB6.GPIO_PuPd=GPIO_NOPULL
 ADC1.DiscontinuousConvMode=DISABLE
-PC13-TAMPER-RTC.Signal=GPIO_Output
 ProjectManager.DefaultFWLocation=true
 PA6.PinState=GPIO_PIN_SET
 Dma.USART1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
@@ -211,11 +207,10 @@ PB9.Mode=I2C
 PA9.Signal=USART1_TX
 Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_TX.1.Instance=DMA1_Channel6
-PB5.Locked=true
 PB9.Locked=true
+PB5.Locked=true
 ProjectManager.RegisterCallBack=
-PC13-TAMPER-RTC.Locked=true
-RCC.USBFreq_Value=72000000
+RCC.USBFreq_Value=64000000
 PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA1.Signal=GPIO_Output
 PA7.GPIO_PuPd=GPIO_PULLUP
@@ -227,10 +222,9 @@ PA5.Signal=GPIO_Output
 board=custom
 Dma.I2C1_TX.1.Priority=DMA_PRIORITY_HIGH
 ProjectManager.LastFirmware=false
-PC13-TAMPER-RTC.GPIO_Label=LED
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 RCC.VCOOutput2Freq_Value=8000000
-RCC.APB2Freq_Value=72000000
+RCC.APB2Freq_Value=64000000
 MxCube.Version=6.2.1
 PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB15.GPIO_Label=DPD_RST
@@ -249,38 +243,36 @@ PB15.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 ADC1.NbrOfConversion=1
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,OscillatorTypeHSE-ClockTree,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 IWDG.IPParameters=Reload,Prescaler
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
-Mcu.Pin26=VP_IWDG_VS_IWDG
-Mcu.Pin27=VP_RTC_VS_RTC_Activate
+Mcu.Pin26=VP_RTC_VS_RTC_Activate
+Mcu.Pin27=VP_SYS_VS_Systick
 PA2.Signal=GPIO_Output
-Mcu.Pin24=PB9
+Mcu.Pin24=VP_ADC1_TempSens_Input
 Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
 ProjectManager.UnderRoot=true
-Mcu.Pin25=VP_ADC1_TempSens_Input
+Mcu.Pin25=VP_IWDG_VS_IWDG
 Dma.USART1_TX.2.PeriphInc=DMA_PINC_DISABLE
 I2C1.OwnAddress=0x68
 Mcu.IP8=SYS
 Mcu.IP9=USART1
-Mcu.Pin28=VP_SYS_VS_Systick
 Mcu.IP6=RCC
 Mcu.IP7=RTC
 ProjectManager.CoupleFile=false
 PA4.Signal=GPIO_Output
-RCC.SYSCLKFreq_VALUE=72000000
-Mcu.Pin22=PB7
+RCC.SYSCLKFreq_VALUE=64000000
+Mcu.Pin22=PB8
 PB5.Signal=GPIO_Output
-PC13-TAMPER-RTC.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-Mcu.Pin23=PB8
-RCC.TimSysFreq_Value=72000000
+Mcu.Pin23=PB9
+RCC.TimSysFreq_Value=64000000
 PA1.Locked=true
 PA7.GPIO_Label=OW
-Mcu.Pin20=PB5
+Mcu.Pin20=PB6
 ADC1.master=1
 PA3.Locked=true
-Mcu.Pin21=PB6
+Mcu.Pin21=PB7
 PA5.GPIO_Label=BMS1
 NVIC.ForceEnableDMAVector=false
 KeepUserPlacement=false
@@ -292,31 +284,31 @@ VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB15
+Mcu.Pin15=PA9
 Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PA9
-Mcu.Pin13=PB11
-Mcu.Pin14=PB14
-Mcu.Pin19=PA14
+Mcu.Pin16=PA10
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin19=PB5
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PA10
+Mcu.Pin17=PA13
 Dma.USART1_TX.2.Mode=DMA_NORMAL
-Mcu.Pin18=PA13
+Mcu.Pin18=PA14
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
-Mcu.Pin11=PB1
-Mcu.Pin12=PB10
+Mcu.Pin11=PB10
+Mcu.Pin12=PB11
 Dma.USART1_TX.2.Instance=DMA1_Channel4
 PB8.Mode=I2C
-Mcu.Pin10=PB0
+Mcu.Pin10=PB1
 IWDG.Prescaler=IWDG_PRESCALER_128
 PB7.Locked=true
 PB8.Signal=I2C1_SCL
 PA3.PinState=GPIO_PIN_SET
 NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-RCC.APB1Freq_Value=36000000
+RCC.APB1Freq_Value=32000000
 Dma.USART1_RX.3.Mode=DMA_NORMAL
 PB0.Signal=GPIO_Input
 Dma.I2C1_RX.0.Instance=DMA1_Channel7
